src/objects/Salesforce_Connect_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Authentication_Token__c</fullName>
        <label>Authentication Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Endpoint__c</fullName>
        <label>Base Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Session_Timeout__c</fullName>
        <defaultValue>120000</defaultValue>
        <inlineHelpText>Number of milliseconds to wait for callout to timeout. Maximum is 120000.</inlineHelpText>
        <label>Session Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Salesforce Connect Settings</label>
</CustomObject>